globus-gram-job-manager (14.18-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gram-job-manager (14.18-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:41 -0400

globus-gram-job-manager (14.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix path to scripts for tests

 -- Globus Toolkit <support@globus.org>  Tue, 27 May 2014 11:46:29 -0400

globus-gram-job-manager (14.16-1+gt6.@distro@) @distro@; urgency=low

  * Unset proxy in tests

 -- Globus Toolkit <support@globus.org>  Thu, 08 May 2014 09:21:12 -0400

globus-gram-job-manager (14.15-1+gt6.@distro@) @distro@; urgency=low

  * Create proxy

 -- Globus Toolkit <support@globus.org>  Thu, 08 May 2014 06:48:05 -0400

globus-gram-job-manager (14.14-1+gt6.@distro@) @distro@; urgency=low

  * Don't use default proxy if available

 -- Globus Toolkit <support@globus.org>  Wed, 07 May 2014 15:27:03 -0400

globus-gram-job-manager (14.13-1+gt6.@distro@) @distro@; urgency=low

  * Add TAP prefix to test output

 -- Globus Toolkit <support@globus.org>  Tue, 06 May 2014 08:41:53 -0400

globus-gram-job-manager (14.12-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 21:11:54 -0400

globus-gram-job-manager (14.12-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 17:27:22 -0400

globus-gram-job-manager (14.11-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 17:04:40 -0400

globus-gram-job-manager (14.10-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 16:02:26 -0400

globus-gram-job-manager (14.9-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes
