@@ -1,3 +1,9 @@
+globus-gram-job-manager (14.19-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix crash when non-standard USER environment variable is not set
+
+ -- Globus Toolkit <support@globus.org>  Wed, 06 Aug 2014 10:10:24 -0400
+
 globus-gram-job-manager (14.18-2+gt6.@distro@) @distro@; urgency=low
 
   * Rename dbg packages
